clients/atlas-tui/tests/snapshots/golden_door__armed__the_arming_question_renders_at_120x36.snap
---
source: tests/golden_door.rs
expression: "asked_about(NEVER_ASKED).frame(120, 36)"
---
" no market assets in the last snapshot                                                                                  "
" 1 ATLAS│▌ THE READ                     ▌ EQUITY                                      │▌ PULSE                          "
"▌2 DESK │⠯ waiting for an Atlas read    ⠯ waiting for a marked book                   │ desk stress  …                  "
" 3 MKTS │                                                                             │ regime --  robust --            "
" 4 BOOK │ATLAS                                                                        │ drawdown --  tier --            "
" 5 RSCH │· The owner has not reported a                                               │ gross --                        "
" 6 PRED │  mode for Atlas.              ──────────────────────────────────────────────│                                 "
" 7 WORK │· No trigger has fired — no    ▌ REGIME                ▌ ALERTS              │▌ BREADTH                        "
" 8 AUDIT│  drawdown tier, drift breach, ⠯ waiting for a regime  ⠯ waiting for a stress│ --                              "
" 9 SETT │  regime flip, or data outage.                                               │ adv -- / dec --                 "
"        │  Nothing to act on is not                                                   │                                 "
"        │  idle by accident.                                                          │▌ MOVERS                         "
"        │                                                                             │ --                              "
"        │                                                                             │                                 "
"        │                ┌────────────────────────────────────────────────────────────────────┐                         "
"        │                │▌ ARM THIS DESK                                                     │ng for the regime panel  "
"        │                │ which posture                                                      │                         "
"        │                │ ▸ ARMED       — approvals, /mode, and a fill behind the confirm box│                         "
"        │                │   READ-ONLY   — the same desk, and this window writes nothing to it│                         "
"        │                │ The owner remembers the answer; a fill still needs you either way. │                         "
"        │                │ Enter chooses · ↑↓ moves · Esc — read-only                         │                         "
"        │                └────────────────────────────────────────────────────────────────────┘                         "
"        │                                                                             │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │                                                                             │ state      --                   "
"        │                               ──────────────────────────────────────────────│ agreement  --                   "
"        │                               ▌ VERDICT               ▌ REPLAY              │ conviction --                   "
"        │                               no verdict yet          ⠯ waiting for a stress│ news       --                   "
"        │                                                                             │─────────────────────────────────"
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                               ─────────────────────── ──────────────────────│ WATCHING                        "
" /command …                                                                 ● SSE  ● OWNER  SYNTHETIC  --·manual  GLASS "
