clients/atlas-tui/tests/snapshots/golden_door__armed__the_mind_question_a_desk_opens_on_renders_at_120x36.snap
---
source: tests/golden_door.rs
expression: "no_mind().frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ THE READ  2026-07-30         ▌ EQUITY                                      │▌ PULSE                          "
"▌2 DESK │▮ 84.0% CONVICTION             ▗█▄ ▗█  ▟▀▜▖    ▟▀▜▖▟▀▜▖▟▀▜▖    ▟▀▜▖▟▀▜▖      │ desk stress  …                  "
" 3 MKTS │ALIGNED · STRESS               ▜▄▖  █  █▗█▌    █▗█▌█▗█▌█▗█▌    █▗█▌█▗█▌      │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │                               ▄▄▛  █  █▛▐▌ ▄  █▛▐▌█▛▐▌█▛▐▌ ▄  █▛▐▌█▛▐▌      │ drawdown 0.0%  tier NONE        "
" 5 RSCH │WOULD CHANGE THIS               ▀  ▀▀▀ ▝▀▀ ▗▛  ▝▀▀ ▝▀▀ ▝▀▀  ▀  ▝▀▀ ▝▀▀       │ gross 100.0%                    "
" 6 PRED │▌ Absorption falling back      ──────────────────────────────────────────────│                                 "
" 7 WORK │  below its threshold for five ▌ REGIME                ▌ ALERTS              │▌ BREADTH                        "
" 8 AUDIT│  sessions.                    STATE    UNCERTAIN      TIER     NONE         │ ███████████████████████████████ "
" 9 SETT │                               DETECTOR CALM           HEADROOM 0.0%         │ adv 1 / dec 4                   "
" 0 VIS  │OBSERVATIONS                   SIG/THR  9.2% / 11.1%   VOL/LIM  10.1% / 30.0%│                                 "
"        │▌ Indicator panel reads stress CONF     66.7%          GATE     1 REFUSED    │▌ MOVERS                         "
"        │  with 3 of 5 detectors                                  est_cost 41bp       │ ▲ best  XLF    +1.24%           "
"        │  agreeing.     ┌────────────────────────────────────────────────────────────────────┐ XLK    -2.08%           "
"        │                │▌ WHICH MINDS                                                       │                         "
"        │NEWS            │ the desk has not said what it can run                              │                         "
"        │RISK OFF · alpac│ ▸ ask what this desk can run  — nothing has asked yet              │ng for the regime panel  "
"        │› Rate-path comm│   codex  — not built: a backend, a launcher and MCP wiring         │                         "
"        │  index futures │   keep what the desk is using                                      │                         "
"        │  wire-a        │ judgment on — the reasoner uses the model chosen here              │                         "
"        │› Energy invento│ Enter chooses · ↑↓ moves · Esc keeps them as they are              │                         "
"        │  ahead of the p└────────────────────────────────────────────────────────────────────┘                         "
"        │  wire-b                                                                     │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │ATLAS                                                                        │ state      STRESS               "
"        │· Mode is PROPOSE and autonomy ──────────────────────────────────────────────│ agreement  ALIGNED              "
"        │  is ON: Atlas starts what its ▌ VERDICT               ▌ REPLAY              │ conviction 84.0%                "
"        │  mode permits.                no verdict yet          2008     --           │ news       alpaca               "
"        │· No trigger has fired — no                              unavailable:        │─────────────────────────────────"
"        │  drawdown tier, drift breach,                           snapshot span does  │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │  regime flip, or data outage.                           not cover the window│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │  Nothing to act on is not                             2020     -17.3%       │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │  idle by accident.                                    2022     -13.9%       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │read c60c46006d926733                                                        │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │window 45fbb3f32be5bef9        ─────────────────────── ──────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
