clients/atlas-tui/tests/snapshots/golden_door__armed__the_second_question_renders_what_the_backends_serve_at_120x36.snap
---
source: tests/golden_door.rs
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
"▌1 DESK │▌ THE READ  2026-07-30         ▌ EQUITY                                      │▌ PULSE                          "
" 2 MKTS │▮ 84.0% CONVICTION             ▗█▄ ▗█  ▟▀▜▖    ▟▀▜▖▟▀▜▖▟▀▜▖    ▟▀▜▖▟▀▜▖      │ desk stress  …                  "
" 3 BOOK │ALIGNED · STRESS               ▜▄▖  █  █▗█▌    █▗█▌█▗█▌█▗█▌    █▗█▌█▗█▌      │ regime CALM  robust UNCERTAIN   "
" 4 RSCH │                               ▄▄▛  █  █▛▐▌ ▄  █▛▐▌█▛▐▌█▛▐▌ ▄  █▛▐▌█▛▐▌      │ drawdown 0.0%  tier NONE        "
" 5 WORK │WOULD CHANGE THIS               ▀  ▀▀▀ ▝▀▀ ▗▛  ▝▀▀ ▝▀▀ ▝▀▀  ▀  ▝▀▀ ▝▀▀       │ gross 100.0%                    "
" 6 AUDIT│▌ Absorption falling back      ──────────────────────────────────────────────│                                 "
" 7 SETT │  below its threshold for five ▌ REGIME                ▌ ALERTS              │▌ BREADTH                        "
"        │  sessions.                    STATE    UNCERTAIN      TIER     NONE         │ ███████████████████████████████ "
"        │                               DETECTOR CALM           HEADROOM 0.0%         │ adv 1 / dec 4                   "
"        │OBSERVATIONS                   SIG/THR  9.2% / 11.1%   VOL/LIM  10.1% / 30.0%│                                 "
"        │▌ Indicator panel┌──────────────────────────────────────────────────────────────────┐S                         "
"        │  with 3 of 5 det│▌ WHICH MINDS                                                     │  XLF    +1.24%           "
"        │  agreeing.      │ per surface                                                      │t XLK    -2.08%           "
"        │                 │   reasoner  claude:inherit                                       │                          "
"        │NEWS             │   reasoner  claude:sonnet                                        │E                         "
"        │RISK OFF · alpaca│   reasoner  claude:opus                                          │ing for the regime panel  "
"        │› Rate-path comme│   reasoner  claude:haiku                                         │                          "
"        │  index futures  │ ▸ reasoner  ollama:qwen2.5:7b  now                               │                          "
"        │  wire-a         │   workforce claude  now                                          │                          "
"        │› Energy inventor│   workforce ollama:qwen2.5:7b                                    │                          "
"        │  ahead of the pr│   keep what the desk is using                                    │                          "
"        │  wire-b         │ judgment on — the reasoner uses the model chosen here            │                          "
"        │                 │ Enter chooses · ↑↓ moves · Esc keeps them as they are            │ READ                     "
"        │ATLAS            └──────────────────────────────────────────────────────────────────┘     STRESS               "
"        │· Mode is PROPOSE and autonomy ──────────────────────────────────────────────│ agreement  ALIGNED              "
"        │  is ON: Atlas starts what its ▌ VERDICT               ▌ REPLAY              │ conviction 84.0%                "
"        │  mode permits.                no verdict yet          2008     --           │ news       alpaca               "
"        │· No trigger has fired — no                              unavailable:        │─────────────────────────────────"
"        │  drawdown tier, drift breach,                           snapshot span does  │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │  regime flip, or data outage.                           not cover the window│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │  Nothing to act on is not                             2020     -17.3%       │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │  idle by accident.                                    2022     -13.9%       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │read c60c46006d926733                                                        │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │window 45fbb3f32be5bef9        ─────────────────────── ──────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
